[package]
name = "colour-of-film"
version = "0.1.0"
authors = ["Nick Ogden <nick@nickogden.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ffav = "4.3"
ffav-sys = "4.3"
image = { version = "0.23", default-features = false, features = ["png"] }
clap = "3.0.0-beta.2"